projects/vb6parse/snapshots/tests/statements/runtime_state/randomize/randomize_simple.snap
---
source: projects/vb6parse/src/syntax/statements/runtime_state/randomize.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RandomizeStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RandomizeKeyword
                  text: Randomize
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
